[package]
name = "chott"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-session = { version = "0.10.1", features=["cookie-session"] }
actix-web = "4.11.0"
chrono = "0.4.41"
rand = "0.9.2"
serde = { version = "1.0.219", features=["derive"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
